--- a/.docker/nginx/app.conf
+++ b/.docker/nginx/app.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     listen [::]:80;
  
+    server_tokens off;
+    
     server_name localhost;
     root /srv/app/public;
   
